--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap"
       rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Karla:wght@200&family=Raleway:wght@100;200&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Karla:wght@200;400;500;700&display=swapfamily=Raleway:wght@100;200&display=swap"
       rel="stylesheet">
   </head>
   <body>
