--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Bridge Fitz</title>
+    <title>Bridget Fitzgerald</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Karla:wght@200;400;500;700&display=swapfamily=Raleway:wght@100;200&display=swap"
