--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta name="theme-color" content="#ffffff">
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Personal portfolio for Bridget Fitzgerald."
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Bridget Fitzgerald</title>
