Adds meta share info

--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,13 @@
     <meta name="theme-color" content="#ffffff">
     <meta
       name="description"
-      content="Personal portfolio for Bridget Fitzgerald."
+      content="Personal portfolio."
     />
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Bridget Fitzgerald">
+    <meta property="og:url" content="https://bridgetro.se">
+    <meta property="og:image" content="%PUBLIC_URL%/website-preview.jpeg">
+    <meta property="og:description" content="Personal portfolio.">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Bridget Fitzgerald</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
