Updates website preview image

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Bridget Fitzgerald">
     <meta property="og:url" content="https://bridgetro.se">
-    <meta property="og:image" content="%PUBLIC_URL%/website-preview.jpeg">
+    <meta property="og:image" content="%PUBLIC_URL%/website-preview.png">
     <meta property="og:description" content="Personal portfolio.">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Bridget Fitzgerald</title>
